Исправление и дополнение документации
